# ARMLET

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: index.md.txt
_sources/api/: armlet.FL_pipeline.data_selection.methods.rst.txt  armlet.FL_pipeline.data_selection.rst.txt  armlet.audit.rst.txt  armlet.data.loading.rst.txt  armlet.data.processing.feature_encoding.rst.txt  armlet.data.processing.rst.txt  armlet.data.processing.utils.rst.txt  armlet.data.saving.rst.txt  armlet.eval.rst.txt  armlet.run.rst.txt
_sources/development/: generate_doc.md.txt  index.md.txt
_sources/getting_started/: install.md.txt
_sources/getting_started/tutorials/: FL_mode.ipynb.txt
_sources/user_guide/: run_exp.md.txt
_sources/user_guide/config/: data.md.txt  eval.md.txt  hydra.md.txt  paths.md.txt
api/: armlet.FL_pipeline.FL_algorithms.html  armlet.FL_pipeline.data_selection.FL_algorithms.html  armlet.FL_pipeline.data_selection.html  armlet.FL_pipeline.data_selection.methods.full.html  armlet.FL_pipeline.data_selection.methods.html  armlet.FL_pipeline.data_selection.methods.random.html  armlet.FL_pipeline.html  armlet.audit.html  armlet.data.cleaning.html  armlet.data.cleaning.missing_values.html  armlet.data.datasets.html  armlet.data.html  armlet.data.loading.html  armlet.data.processing.feature_encoding.html  armlet.data.processing.format_conversion.html  armlet.data.processing.html  armlet.data.processing.image_loading.html  armlet.data.processing.normalization.html  armlet.data.processing.utils.html  armlet.data.saving.html  armlet.data.splitter.html  armlet.data.utils.html  armlet.eval.evaluators.html  armlet.eval.html  armlet.eval.metrics.html  armlet.html  armlet.run.html  armlet.utils.configs.html  armlet.utils.custom_loss.html  armlet.utils.html  armlet.utils.log.html  armlet.utils.net.html  modules.html
armlet/: __init__.py  run.py
armlet/FL_pipeline/FL_algorithms/: __init__.py
armlet/audit/: __init__.py
armlet/data/: __init__.py  datasets.py  loading.py  processing.py  saving.py  splitter.py  utils.py
armlet/data/cleaning/: __init__.py
armlet/eval/: evaluators.py  metrics.py
armlet/results_analysis/: plot_experiments.py  print_data_distribution.py  print_tables.py  t_tests.py  utils.py
armlet/utils/: configs.py  custom_loss.py  log.py  net.py
configs/: config.yaml
configs/data/: default.yaml
configs/eval/: all.yaml  default.yaml  only_global_model.yaml  only_server_side.yaml  specific_metrics.yaml
configs/exp/: fl.yaml  fl_gpu.yaml
configs/experiment/: template.yaml
configs/hydra/: default.yaml  example.yaml
configs/logger/: default.yaml
configs/method/: data_selection.yaml  default.yaml
development/: CODE_OF_CONDUCT.html  generate_doc.html  index.html
docs/: requirements.txt
docs/source/: conf.py  index.md
getting_started/: index.html  install.html  run_first_exp.html
getting_started/tutorials/: FL_mode.html  data_pipeline.html  index.html
tutorials/: FL_mode.ipynb  data_pipeline.ipynb
user_guide/: extend.html  index.html  run_exp.html
user_guide/config/: data.html  eval.html  exp.html  hydra.html  index.html  logger.html  method.html  paths.html  protocol.html  save.html
(+93 files in other folders)
